--- a/index.njk
+++ b/index.njk
@@ -1,5 +1,7 @@
 ---
 bodyClass: "home"
+backLink: '/'
+backLinkText: ''
 footerLinks: false
 ---
 {% from './_includes/article-block.njk' import articleBlock %}
