--- a/writing.njk
+++ b/writing.njk
@@ -1,6 +1,8 @@
 ---js
 {
     title: 'Writing',
+    backLink: '/',
+    backLinkText: 'Go home',
     eleventyComputed: {
         footerLinks: (data) => [
             ...data.footerLinks,
@@ -92,5 +94,3 @@
         </div>
     </div>
 </section>
-
-{# {% include 'footer.njk' %} #}
