--- a/scss/components/_case-study-row.scss
+++ b/scss/components/_case-study-row.scss
@@ -19,12 +19,33 @@ $transition: transform $duration ease-in;
   &:has(a:hover) {
     // --color-echo: #{$color-text};
   }
+  &--coming-soon {
+    pointer-events: none;
+    cursor: disabled;
+    color: #777;
+    position: relative;
+    &:before {
+      position: absolute;
+      inset-inline: 0;
+      text-transform: uppercase;
+      font-weight: bold;
+      display: inline-block;
+      width: max-content;
+      transform: translateY(-50%);
+
+      top: 50%;
+      content: "Coming soon";
+      color: $color-text;
+      z-index: 2;
+      margin-inline: auto;
+    }
+  }
   &:nth-of-type(1) {
     @include screen(sm) {
       padding-inline-start: 5rem;
     }
     @include screen(lg) {
-      padding-inline-start: calc(10vw)
+      padding-inline-start: calc(10vw);
     }
   }
   &:nth-of-type(2) {
@@ -32,7 +53,7 @@ $transition: transform $duration ease-in;
       padding-inline-start: 10rem;
     }
     @include screen(lg) {
-      padding-inline-start: calc(20vw)
+      padding-inline-start: calc(20vw);
     }
   }
   &:nth-of-type(3) {
@@ -40,7 +61,7 @@ $transition: transform $duration ease-in;
       padding-inline-start: 8rem;
     }
     @include screen(lg) {
-      padding-inline-start: calc(40vw)
+      padding-inline-start: calc(40vw);
     }
   }
   &:nth-of-type(4) {
@@ -48,7 +69,7 @@ $transition: transform $duration ease-in;
       padding-inline-start: 6rem;
     }
     @include screen(lg) {
-      padding-inline-start: calc(35vw)
+      padding-inline-start: calc(35vw);
     }
   }
   &:nth-of-type(5) {
@@ -56,7 +77,7 @@ $transition: transform $duration ease-in;
       padding-inline-start: 0rem;
     }
     @include screen(lg) {
-      padding-inline-start: calc(25vw)
+      padding-inline-start: calc(25vw);
     }
   }
   &:nth-of-type(6) {
@@ -64,7 +85,7 @@ $transition: transform $duration ease-in;
       padding-inline-start: 2rem;
     }
     @include screen(lg) {
-      padding-inline-start: calc(5vw)
+      padding-inline-start: calc(5vw);
     }
   }
   &__inner {
@@ -121,7 +142,6 @@ $transition: transform $duration ease-in;
     white-space: nowrap;
     color: var(--color-echo);
     @include screen(sm) {
-
       filter: blur(1.5px);
     }
     .case-study-row:has(a:hover) & {
