--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -212,6 +212,22 @@
     margin-block-end: 0.75rem;
     border: 2px solid currentColor;
     border-radius: $bdrs;
+    overflow: hidden;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      filter: blur(0);
+      transform: scale(1);
+      transition: all 0.4s;
+    }
+    &:hover {
+      img {
+        transform: scale(1.02);
+        filter: blur(4px);
+      }
+    }
 
     @include screen(sm) {
       justify-self: end;
@@ -253,6 +269,10 @@
     // max-width: 100%;
     // overflow: hidden;
     padding-right: 0.5ch;
+  }
+  &__marquee-locale,
+  &__marquee-time {
+    color: $color-text-mid;
   }
   .home-nav {
     @include screen(lg) {
