--- a/_components/home-hero.webc
+++ b/_components/home-hero.webc
@@ -22,7 +22,7 @@
                 <li class="home-nav__list-item" webc:for="link of linkGroup.links">
                     <a class="home-nav__link" :href="link.url">
                         <template webc:nokeep @text="link.text"></template>
-                        <span class="home-nav__link-description" @text="`— ${link.description}`">— {{
+                        <span class="home-nav__link-description" inert @text="`— ${link.description}`">— {{
                             link.description
                             }}</span></a>
                 </li>
