--- a/index.njk
+++ b/index.njk
@@ -36,6 +36,6 @@ footerLinks: false
     </ul>
     <a class="home-articles__link" href="/writing">View all articles →</a>
 </section>
-<img class="footer-border" src="/img/footer-border.png">
+<img class="footer-border" src="/img/footer-border.png" alt="">
 {# {% include 'footer.njk' %} #}
 {# <script src="/js/index.js" type="module"></script> #}
