--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -1,71 +1,71 @@
 @font-face {
-    font-family: 'Louize';
-    src: url('/fonts/subset-Louizetrial.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Louize';
+  src: url('/fonts/subset-Louizetrial.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Louize';
-    src: url('/fonts/subset-Louizetrial-Italic.woff2') format('woff2');
-    font-weight: normal;
-    font-style: italic;
-    font-display: swap;
+  font-family: 'Louize';
+  src: url('/fonts/subset-Louizetrial-Italic.woff2') format('woff2');
+  font-weight: normal;
+  font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Louize Display';
-    src: url('/fonts/subset-LouizeDisplaytrial-Italic.woff2') format('woff2');
-    font-weight: normal;
-    font-style: italic;
-    font-display: swap;
+  font-family: 'Louize Display';
+  src: url('/fonts/subset-LouizeDisplaytrial-Italic.woff2') format('woff2');
+  font-weight: normal;
+  font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Louize Display';
-    src: url('/fonts/subset-LouizeDisplaytrial.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Louize Display';
+  src: url('/fonts/subset-LouizeDisplaytrial.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: "Neue Montreal";
-    src: url('/fonts/PPNeueMontreal-Regular.woff2');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Neue Montreal';
+  src: url('/fonts/PPNeueMontreal-Regular.woff2');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: "Neue Montreal";
-    src: url('/fonts/PPNeueMontreal-Italic.woff2');
-    font-weight: normal;
-    font-style: italic;
-    font-display: swap;
+  font-family: 'Neue Montreal';
+  src: url('/fonts/PPNeueMontreal-Italic.woff2');
+  font-weight: normal;
+  font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: "Neue Montreal";
-    src: url('/fonts/PPNeueMontreal-Bold.woff2');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Neue Montreal';
+  src: url('/fonts/PPNeueMontreal-Bold.woff2');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: "Neue Montreal";
-    src: url('/fonts/PPNeueMontreal-BoldItalic.woff2');
-    font-weight: bold;
-    font-style: italic;
-    font-display: swap;
+  font-family: 'Neue Montreal';
+  src: url('/fonts/PPNeueMontreal-BoldItalic.woff2');
+  font-weight: bold;
+  font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Manuka';
-    src: url('/fonts/manuka-black.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Manuka';
+  src: url('/fonts/manuka-black.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
