--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -208,7 +208,7 @@
       grid-row: -2 / span 2;
       align-self: end;
     }
-    .word {
+    .line {
       display: inline-block;
       clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
     }
