🍴 - Fix table-of-contents underlines

--- a/_includes/table-of-contents.njk
+++ b/_includes/table-of-contents.njk
@@ -3,10 +3,11 @@
         <ol class="table-of-contents__list" role="list">
             {% for entry in toc %}
                 <li>
-                    {# TODO: Figure out why this triggers taxi without `target=""` #}
+                    <div>
                     {% if entry.id %}<a href="#{{ entry.id }}">{% endif %}
                         {{- entry.text -}}
                     {% if entry.id %}</a>{% endif %}
+                    </div>
                 </li>
             {% endfor %}
         </ol>
