--- a/scss/components/_page-nav.scss
+++ b/scss/components/_page-nav.scss
@@ -13,10 +13,6 @@
   text-transform: uppercase;
   text-wrap: balance;
   opacity: 1;
-  &--inert {
-    pointer-events: none;
-    user-select: none;
-  }
 
   @include screen(sm) {
     display: grid;
@@ -25,9 +21,12 @@
   }
   @include screen(lg) {
     column-gap: 1rem;
-    // font-size: 0.75rem;
     grid-template-columns: minmax(0, 1fr) auto minmax(0, 1fr);
     margin-block-end: 0;
+  }
+  &--inert {
+    user-select: none;
+    pointer-events: none;
   }
   &--hidden {
     transition: all 0.2s;
@@ -35,7 +34,6 @@
     opacity: 0;
 
     + div:has(.home-hero) {
-      // border: 1px solid red;
       transform: translateY(0);
     }
   }
@@ -57,22 +55,22 @@
     }
   }
   &__brand-flag {
-    position: absolute;
-    left: calc(100% + 0.5ch);
     width: max-content;
     transition: all 0.2s;
-    transform: translateX(-1rem);
-    opacity: 0;
     color: $color-text-mid;
 
+    @include screen(sm) {
+      position: absolute;
+      left: calc(100% + 0.5ch);
+      transform: translateX(-1rem);
+      opacity: 0;
+    }
     @include screen(lg) {
       top: 1em;
       left: 0;
       width: 100%;
       transform: translateY(-1rem);
       text-align: center;
-      &:before {
-      }
     }
     @include screen(1270px) {
       top: unset;
@@ -80,19 +78,16 @@
       width: max-content;
       transform: translateX(-1rem);
       text-align: left;
-
-      &:before {
-        display: inline-block;
-        transform: translateX(0.5rem);
-      }
     }
     &:before {
       display: inline-block;
       margin-right: 0.5ch;
       content: '—';
-      transition: all 0.2s;
-      transform: translateX(0.5rem);
 
+      @include screen(sm) {
+        transition: all 0.2s;
+        transform: translateX(0.5rem);
+      }
       @include screen(lg) {
         display: none;
       }
@@ -127,9 +122,6 @@
     max-width: 30ch;
     margin-block-end: 1em;
     color: $color-text-mid;
-    > span {
-      color: $color-text;
-    }
 
     @include screen(sm) {
       grid-row-end: span 2;
@@ -137,6 +129,9 @@
     }
     @include screen(lg) {
       max-width: unset;
+    }
+    > span {
+      color: $color-text;
     }
   }
   &__back-link {
@@ -160,7 +155,6 @@
 
     span:after {
       position: absolute;
-      // bottom: 0.3em;
       bottom: 0.1em;
       left: 0;
       width: 100%;
@@ -173,16 +167,9 @@
     }
     &:hover,
     &:active {
-      // text-decoration: underline;
       span:after {
         transform: scaleX(1);
         transform-origin: 0 0;
-      }
-    }
-
-    &:hover {
-      span {
-        // text-decoration: underline;
       }
     }
   }
